set(LLVM_LINK_COMPONENTS
  jit
  interpreter
  nativecodegen
  asmparser
  bitreader
  bitwriter
  codegen
  ipo
  linker
  selectiondag
  all-targets
  )

add_clang_executable(clang-test
  main.cpp
  )

add_dependencies(clang-test
  clang-headers
  )

target_link_libraries(clang-test
  clangFrontend
  clangSerialization
  clangDriver
  clangCodeGen
  clangSema
  clangStaticAnalyzerFrontend
  clangStaticAnalyzerCheckers
  clangStaticAnalyzerCore
  clangAnalysis
  clangRewriteCore
  clangRewriteFrontend
  clangAST
  clangParse
  clangLex
  clangBasic
  )
